syntax = "proto3";

package chef.automate.domain.infra_proxy.request;
option go_package = "github.com/chef/automate/api/interservice/infra_proxy/request";

message AffectedNodes {
    // ID of the Org.
    string org_id = 1;
    // ID of the Server.
    string server_id = 2;
    // The resource name (e.g. 'cookbooks', 'roles').
    string resource = 3;
    // Name of the resource.
    string name = 4;
    // Version of the resource.
    string version = 5;
}
